# live-server

./: Cargo.toml
src/: lib.rs  listing.rs  main.rs  server.rs  static_files.rs  watcher.rs
src/public/: entry.html  index.css
src/scripts/: websocket.js
src/templates/: listing.html
tests/: test.rs
