[package]
name = "live-server"
version = "0.7.0"
edition = "2021"
authors = ["Lomirus"]
description = "Launch a local network server with live reload feature for static pages."
homepage = "https://github.com/lomirus/live-server"
repository = "https://github.com/lomirus/live-server"
license = "MIT"
keywords = ["live", "server", "web", "reload"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "6.1.1"
clap = { version = "4.5.4", features = ["derive"] }
local-ip-address = "0.6.1"
log = "0.4.21"
env_logger = "0.11.3"
notify-debouncer-full = "0.3.1"
tokio = { version = "1.37.0", features = ["full"] }
axum = { version = "0.7.5", features = ["ws"]}
futures = "0.3.30"
mime_guess = "2.0.4"
chrono = "0.4.38"
open = "5.1.2"
path-slash = "0.2.1"

[dev-dependencies]
reqwest = "0.12.3"
